--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "astro": "^3.0.5"
   },
   "devDependencies": {
-    "@astrojs/partytown": "^2.0.0"
+    "@astrojs/partytown": "^2.0.0",
+    "@resvg/resvg-js": "^2.4.1",
+    "satori": "^0.10.4",
+    "sharp": "^0.32.5"
   }
 }
