--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@astrojs/partytown": "^2.0.0",
     "@resvg/resvg-js": "^2.4.1",
     "satori": "^0.10.4",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "textlint": "^13.3.3",
+    "textlint-rule-abbr-within-parentheses": "^1.0.2",
+    "textlint-rule-no-todo": "^2.0.1",
+    "textlint-rule-preset-ja-technical-writing": "^8.0.0",
+    "textlint-rule-preset-japanese": "^8.0.0",
+    "textlint-rule-terminology": "^4.0.0"
   }
 }
